# table-representation-evals

./: .gitignore  .gitmodules  DATASETS.md  README.md  process_results.py  pyproject.toml  reqs_benchmark.txt  requirements.txt  run.sh  run_NL2cell2column_mapping_benchmark.py  run_NL2column_mapping_benchmark.py  run_benchmark.sh  run_experiments.py  run_paper_experiments.sh  run_table_paper_experiments.sh  run_table_paper_rerun.sh  run_test_before_commit.sh  setup_benchmark.sh.template
approaches/: pyproject.toml
approaches/benchmark_approaches_src/: __init__.py
approaches/benchmark_approaches_src/<approach_name>/: approach.py  cell_embedding_component.py  predictive_ml_component.py  row_embedding_component.py  row_similarity_search_component.py
approaches/benchmark_approaches_src/GritLM/: __init__.py  approach.py  approach_utils.py  cell_embedding_component.py  column_embedding_component.py  row_embedding_component.py  table_embedding_component.py
approaches/benchmark_approaches_src/baseline/: approach.py  predictive_ml_component.py
approaches/benchmark_approaches_src/contexttab/: __init__.py  approach.py  column_embedding_component.py  predictive_ml_component.py  row_embedding_component.py  setup.sh  torch_compatibility.py
approaches/benchmark_approaches_src/hashing/: approach.py  table_embedding_component.py
configs/: README.md  (+3 more)
dataset_creation/: .gitignore  README.md  create_benchmark.sh  create_join_benchmark.sh  pyproject.toml  requirements.txt
dataset_creation/config/: config.yaml
dataset_creation/dataset_creation_src/: prepare_em_datasets.py
(+480 files in other folders)
