[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dataset_creation_src"]

[project]
name = "dataset_creation_src"
version = "0.0.1"
authors = [
  { name="Liane Vogel", email="liane.vogel@cs.tu-darmstadt.de" },
  { name="Kavitha Srinivas", email="kavitha.srinivas@ibm.com" },
  { name="Niharika DSouza", email="Niharika.DSouza@ibm.com" },
  { name="Oktie Hassanzadeh", email="hassanzadeh@us.ibm.com" },
  { name="Sola Shirai", email="solashirai@ibm.com" },
  { name="Horst Samulowitz", email="samulowitz@us.ibm.com" },
]
description = "Code to create and adapt datasets to benchmark tabular embeddings"
readme = "README.md"
